--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<!-- Nombre en pestaña  -->
-	<title>DTS</title>
+	<title>DTS tarea ayudantía 6</title>
 	<!-- Importar hoja de estilo  -->
 	<link rel="stylesheet" href="style.css">
 	<!-- Importar tipografías-->
