--- a/index.html
+++ b/index.html
@@ -2,78 +2,123 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<!-- Nombre en pestaña  -->
-	<title>DTS tarea ayudantía 6</title>
-	<!-- Importar hoja de estilo  -->
-	<link rel="stylesheet" href="style.css">
-	<!-- Importar tipografías-->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>La evolución de la tecnología</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://kit.fontawesome.com/1376679f11.js" crossorigin="anonymous"></script>
 </head>
+<body>
 
-<header> <!-- En el header va el encabezado de nuestra pagina-->
+	<aside id="analogia">
+		<h3>Analogía orgánico-mecánico</h3>
+		<p>Compara a los organismos vivos con instrumentos mecánicos. En primer instancia se hacían analogías sobre factores/elemenos orgánicos con cosas del ámbito mecánico. A mediados del S. XIX, en conjunto con el desarrollo de la tecnología, elementos y siutaciones de lo mécanico tenían analogías orgánicas.</p>
+</aside>
 
+<div id="contenedor">
 
-	<div id="introduccion">
-		<h1>Título: Ayudantía 6</h1>
-		<img src="img/imagen01.jpg">
-		<p>Párrafo para describir a mi gato</p>
-	</div>
-
-
+<center>
+<header id="título">
+	
+		<h1>La evolución de la tecnología</h1>
 </header>
+</center>
 
+<nav class="indice">	
+		 <ul>
+		 	<h4>Índice</h4>
+		 	<li><a href="#autor">Autor</a></li>
+    		<li><a href="#resumen">Resumen</a></li>
+    		<li><a href="#diversidad">Diversidad</a></li>
+    		<li><a href="#necesidad">Necesidad</a></li>
+    		<li><a href="#evolucion">Evolución</a></li>
+    		<li><a href="#referencias">Referencias</a></li>
+ 		 </ul>
+</nav>
 
-<body> <!-- En el body va el cuerpo de nuestra pagina -->
+<article>
 
+<section>
+<section id="autor">
+		<h2>Autor:</h2>
+		<center>
+		<div class="autor">
+			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
+		</div>
+		</center>
+		<p> <i class="fa-solid fa-person"></i> Nombre: Geogre Basalla</p>
+		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: 1928</p>
+		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: Altoona, Pensilvania, EE.UU.</p>
+		<p> <i class="fa-solid fa-book-open"></i> Entre sus libros se encuentran: "The Rise of Modern Scinece: Internal or Externar Factors?" y "Civilized Life in the Universe: Scientists on Intelligent Extraterrestrials".</p>	
+</section>
 
-	<div id="contenedor">
-        
-		<h2>A Sub titulo para este proyecto</h2>
-				<img src="img/imagen02.jpg">
-		<p>-Otro párrafo cortito...</p>
-			
-		<h3>B Sub titulo otro contenido</h3>
-		<p>Un párrafo final tipo conclusión</p>
+<section id="grande">
+	<section id="resumen">
+		<h2>Resumen:</h2>
+		<center>
+		<div class="libro">
+			<img src="fotos/libro.jpg" class="libro" width="150px" height="auto">
+		</div>
+		</center>
+		<p>En pocas palabras, lo que el autor propone, es que los cambios en la historia de la tecnología se dividen en:</p>
+		<p> &#128204; Cambios menores, que se distinguen por ser de carácter progresivo, no atribuíbles a un autor en particular.</p>
+		<p> &#128204; Cambios mayores, asosciados a inventores individuales.</p>
+		<p>Cuando se habla de la evolución de la tecnología se deben tener presentes la diversidad, la continuidad, novedad y la selección:</p>
+		<p>El mundo artifical contiene una variedad de cosas mucho mayor que las necesidades humanas básicas. La diversidad es el resultado de la evolución tecnológica; un proceso continuo. La novedad promueve el proceso de selección, que consiste en la elección de nuevos actefactos.</p>
+</section>	
 
-		<h2>C Sub titulo vis 1</h2>
-		<img src="img/vis01.jpg">
-		<p>Un párrafo explicativo</p>
+<section id="diversidad">
+		<h2>Diversidad:</h2>
+		<center>
+		<img src="fotos/diversidad.png" class="divers" width="150px" height="auto">
+		</center>
+		<p>A pesar de que en texto se mencionan distintos tipos de diversidad, se hablará específicamente sobre la diversidad de cosas realizadas por manos humanas.</p>
+		<p>El ser humano he encontrado diversas motivaciones para la invención de nuevos artefacfos. Entre estas se destacan:</p>
+		<p>Facilitar las relaciones sociales, deleitar la fantasía, crear símbolos significativos, entre otras.</p>
+		<p>La historia de la tecnología permite estudiar la invención, producción y usos de los objetos materiales. A raíz de lo anterior, E. E. Cummings, propone que "el mundo de lo hechos no es el mundo de lo nacido.</p>
+		<p>Mientras que el mundo de lo nacido se caracteriza por ser el resultado de la actividad humana y produce objetos físicos estériles, el mundo de lo nacido consiste en el proceso natural aleatorio en el que un ser vivo es capaz de reproducirse.</p>
+		<p>La diversidad dentro del mundo de los "hecho por lo humano", está directamente relacionada con el contexto cultural. En variadas clases se ha hablado sobre el impacto ecológico-medioambiental de la tecnología, cuyos avances no solo parecieran ser necesarios, sino que tamnién inminentes. El texto ha demostrado, que en parte es nuestra cultura la que nos hace sentir la necesidad de tener en nuestras manos las tecnologías más "avanzadas", a pesar de que en muchos casos no son realmente necesarias ni siquiera dentro de nuestro contexto. Tal vez, no nos quejamos suficiente de la obsolescencia programada porque nos da una excusa para querer obtener "lo nuevo".</p>
+</section>	
 
-		<h2>D Sub titulo vis 2</h3>
-		<object data="img/vis02.svg" type="image/svg+xml"></object>
-		<p>Un párrafo explicativo</p>
+<section id="necesidad">
+		<h2>Necesidad:</h2>
+		<center>
+		<img src="fotos/necesidad.png" class="manzana" width="150px" height="auto">
+		</center>
+		<p>Se problematiza la relación entre la necesidad de suplir necesidades básicas y la invención de nuevas tecnologías:</p>
+		<p> &#128204; El ingenio nace de la necesidad: Se inventan cosas para satisfacer necesidades biológicas (báscias).</p>
+		<p> &#128204; Las necesidades surgen posterior a la invención: Un ejemplo acertado es el de los vehículos mortizados; la invención de los mismos da lugra a la necesidad del transpore motorizado en la actualidad.</p>
+		<p>Puede que nuestro concepción de lo que se considera necesario esté occidentalizada. Incluso, adaptada a la realidad país. Son muchas las cosas que nosotros usamos día a día sin ser realmente conscientes de que no todos las utilizan. El típico "tostdor chileno", solo se utiliza en Chile, y a pesar de que las personas aquí lo encuentran fundamental para la preparación de algunos alimentos, pareciera ser que en otros países no lo es. Lo mismo ocurre con un sin fin de objetos que necesitamos solo por costumbre, nos hemos acostumbrado a la comodidad. Puede que estemos confundiendo deseos y necesidades.</p>
 
-	</div><!-- cierre div contenedor -->
+</section>
 
+<section id="evolucion">
+		<h2>Evolución:</h2>
+		<center>
+		<object data="fotos/evolucion.svg" width="150px" height="auto"></object>
+		</center>
+		<p>2 principales ideas con respecto a la evolución tecnológica:</p>
+		<p> &#128204; Concepción heróica: una sola persona (individuo) es quien inventa/crea un artefacto.</p>	
+		<p> &#128204; Del darwinismo: evolución; cambio acumulativo. Combinación de elementos culturales para formar otro. </p>
+		<p>Esta última, se basa en 4 premisas: </p>
+		<p>1.- Percepción del problema: se reconoce un modelo incompleto que requiere de una corrección.</p>
+		<p>2.- Formulación del marco: reúne datos relacionados con el prblema</p>
+		<p>3.- Acto de invituición: solución al problema mediante el acto mental no predeterminad </p>
+		<p>4.- Revisión crítica: revisa y analiza por completo la solución.</p>
+		<p>La evolución tecnológica pasa por periodos de cambio rápidos y otros de relativa estabilidad. A pesar de que se habla de que vivimos en "era del progreso, la tecnología y el acceso", muchas veces esa tecnología llega a nosotros forzadamente después, un ejemplo es el de los autos eléctricos, que a pesar de exisitir y ser comunes en ciertos países, en Chile no son de uso ni venta masiva debido a que todavía ha sido posible (por diversos motivos) en instalar en Chile de forma significativa puntos de carga para dichos vehículos.</p>
+</section>	
+</article>
 
-	<div id="desarrollo">
-		otro div
-	</div>
-
-
-	<div id="conclusion">
-		otro div mas...
-	</div>
-
-	</div>
-
-</body>
-
-
-<footer>   <!-- En el footer va el pie de pagina de nuestra web -->
-
-	<div class="info-footer">
-		<ul class="lista-footer">
-	    	<li><a href="/">Twitter</a></li>
-	    	<li><a href="/">Instagram</a></li>
-	    	<li><a href="/">Facebook</a></li>
-		</ul>
-	</div>
-
+<footer id="referencias">
+	<h4>Referencias:</h4>
+	<p>Wikipedia contributors. (2020, noviembre 18). George Basalla. Wikipedia, The Free Encyclopedia. https://en.wikipedia.org/w/index.php?title=George_Basalla&oldid=989336759</p>
+	<p>Estructura web y documentación. (s/f). Mozilla.org. Recuperado el 3 de octubre de 2022, de https://developer.mozilla.org/es/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure</p>
+	<p>Tutorial Point. (2020). Html tutorial (Tutorial Point, Ed.). Independently Published.</p>
+	<p>Font awesome. (s/f). Fontawesome.com. Recuperado el 3 de octubre de 2022, de https://fontawesome.com/</p>
 </footer>
 
 
+
+</div>
+
+</body>
 </html>
