añadi los autores

--- a/index.html
+++ b/index.html
@@ -45,10 +45,43 @@
 			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
 		</div>
 		</center>
-		<p> <i class="fa-solid fa-person"></i> Nombre: Geogre Basalla</p>
-		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: 1928</p>
-		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: Altoona, Pensilvania, EE.UU.</p>
-		<p> <i class="fa-solid fa-book-open"></i> Entre sus libros se encuentran: "The Rise of Modern Scinece: Internal or Externar Factors?" y "Civilized Life in the Universe: Scientists on Intelligent Extraterrestrials".</p>	
+		<p> <i class="fa-solid fa-person"></i> Nombre: Fernando Domínguez Rubio</p>
+		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: Unknow</p>
+		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: Unknow</p>
+		<p> <i class="fa-solid fa-book-open"></i> Sociólogo cuyas líneas de investigación se orientan hacia la ciencia y tecnología, la antropología, el arte, los estudios urbanos y la arquitectura.
+
+Actualmente Investigador Post-Doctoral Marie Curie Post-Doctoral Fellow en la New York University (NYU) y el Centre for Research on Socio-Cultural Change (CRESC) y profesor en el Departamento de Comunicación en la Universidad de California, San Diego. 
+
+Concretamente, sus investigaciones se centran en el estudio de los ambientes, prácticas, tecnologías e infraestructuras a través de las cuales las diferentes formas de la subjetividad y la objetividad se producen de forma contingente en lugares específicos. Se encuentra particularmente interesado en los nuevos regímenes de objetualidad y la personalidad, es decir, nuevas formas de producir, comunicar y reproducir ‘objetos’ y ‘personas’- emergiendo de tecnologías e infraestructuras contemporáneas.
+
+Su investigación se centra en el estudio de las condiciones infraestructurales y ecológicas que permiten la reproducción de distintas formas de subjetividad y objetividad. 
+
+Su principal proyecto tiene que ver con el desarrollo de un enfoque ecológico para el estudio de las formas culturales y categorías. Este proyecto se basa principalmente en una exploración etnográfica del backstage del MoMA, donde explora las ecologías materiales necesarias para mantener la legibilidad de obras de arte como objetos valiosos, «poseíbles» y significativos.
+
+Además de este trabajo, también desarrolla una serie de proyectos de investigación acerca de las dimensiones políticas de infraestructuras físicas y digitales contemporáneas. Por último, también está interesado en el desarrollo de metodologías experimentales basadas en el uso estratégico de la ficción. Es también uno de los editores del blog Material World Blog y coautor del libro “The Politics Of Knowledge”.
+</p>	
+</section>
+<section id="autor">
+		<h2>Autor:</h2>
+		<center>
+		<div class="autor">
+			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
+		</div>
+		</center>
+		<p> <i class="fa-solid fa-person"></i> Nombre: Uriel Fogué </p>
+		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: 1976</p>
+		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: Madrid, España.</p>
+		<p> <i class="fa-solid fa-book-open"></i> 
+		Uriel Fogué es doctor arquitecto por la UPM (tesis doctoral fue premio extraordinario, 2014-15 y también tesis finalista en la X Bienal Iberoamericana de Arquitectura y Urbanismo, 2016).
+
+		Actualmente, es profesor de proyectos arquitectónicos en la École Polytechnique Fédérale de Lausanne (EPFL), la Escuela Técnica Superior de Arquitectura de Madrid (UPM) y la Universidad Europea de Madrid (UEM).
+
+		Desde el 2006 codirige la oficina de arquitectura elii y es miembro fundador del grupo de discusión y debate Gabinete de Crisis de Ficciones Políticas, desde 2012.
+
+		Es coeditor del libro: Planos de intersección: materiales para un diálogo entre filosofía y arquitectura (Lampreave, 2011, con Luis Arenas). Y coeditor de la publicación UHF (junto al colectivo UHF), incluida en el Archivo de Creadores de Madrid.
+
+		Entre sus trabajos se destaca el libro “Las arquitecturas del fin del mundo”, una recopilación ensayos del mismo.
+		</p>	
 </section>
 
 <section id="grande">
@@ -66,54 +99,47 @@
 		<p>El mundo artifical contiene una variedad de cosas mucho mayor que las necesidades humanas básicas. La diversidad es el resultado de la evolución tecnológica; un proceso continuo. La novedad promueve el proceso de selección, que consiste en la elección de nuevos actefactos.</p>
 </section>	
 
-<section id="diversidad">
-		<h2>Diversidad:</h2>
+<section id="autor">
+		<h2>Autor:</h2>
 		<center>
-		<img src="fotos/diversidad.png" class="divers" width="150px" height="auto">
+		<div class="autor">
+			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
+		</div>
 		</center>
-		<p>A pesar de que en texto se mencionan distintos tipos de diversidad, se hablará específicamente sobre la diversidad de cosas realizadas por manos humanas.</p>
-		<p>El ser humano he encontrado diversas motivaciones para la invención de nuevos artefacfos. Entre estas se destacan:</p>
-		<p>Facilitar las relaciones sociales, deleitar la fantasía, crear símbolos significativos, entre otras.</p>
-		<p>La historia de la tecnología permite estudiar la invención, producción y usos de los objetos materiales. A raíz de lo anterior, E. E. Cummings, propone que "el mundo de lo hechos no es el mundo de lo nacido.</p>
-		<p>Mientras que el mundo de lo nacido se caracteriza por ser el resultado de la actividad humana y produce objetos físicos estériles, el mundo de lo nacido consiste en el proceso natural aleatorio en el que un ser vivo es capaz de reproducirse.</p>
-		<p>La diversidad dentro del mundo de los "hecho por lo humano", está directamente relacionada con el contexto cultural. En variadas clases se ha hablado sobre el impacto ecológico-medioambiental de la tecnología, cuyos avances no solo parecieran ser necesarios, sino que tamnién inminentes. El texto ha demostrado, que en parte es nuestra cultura la que nos hace sentir la necesidad de tener en nuestras manos las tecnologías más "avanzadas", a pesar de que en muchos casos no son realmente necesarias ni siquiera dentro de nuestro contexto. Tal vez, no nos quejamos suficiente de la obsolescencia programada porque nos da una excusa para querer obtener "lo nuevo".</p>
-</section>	
+		<p> <i class="fa-solid fa-person"></i> Nombre: Evan Roth</p>
+		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: Michigan, Estados Unidos</p>
+		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: 1978</p>
+		<p> <i class="fa-solid fa-book-open"></i> Evan Roth, es un artista estadounidense que aplica la filosofía del “hackeo” en la práctica de las artes visuales en periodos de corta duración en el espacio público, “online”, y en dentro de la cultura popular.
 
-<section id="necesidad">
-		<h2>Necesidad:</h2>
-		<center>
-		<img src="fotos/necesidad.png" class="manzana" width="150px" height="auto">
-		</center>
-		<p>Se problematiza la relación entre la necesidad de suplir necesidades básicas y la invención de nuevas tecnologías:</p>
-		<p> &#128204; El ingenio nace de la necesidad: Se inventan cosas para satisfacer necesidades biológicas (báscias).</p>
-		<p> &#128204; Las necesidades surgen posterior a la invención: Un ejemplo acertado es el de los vehículos mortizados; la invención de los mismos da lugra a la necesidad del transpore motorizado en la actualidad.</p>
-		<p>Puede que nuestro concepción de lo que se considera necesario esté occidentalizada. Incluso, adaptada a la realidad país. Son muchas las cosas que nosotros usamos día a día sin ser realmente conscientes de que no todos las utilizan. El típico "tostdor chileno", solo se utiliza en Chile, y a pesar de que las personas aquí lo encuentran fundamental para la preparación de algunos alimentos, pareciera ser que en otros países no lo es. Lo mismo ocurre con un sin fin de objetos que necesitamos solo por costumbre, nos hemos acostumbrado a la comodidad. Puede que estemos confundiendo deseos y necesidades.</p>
+Tiene un título en arquitectura de la Universidad de Maryland y un MFA de la Communication, Design and Technology School en Parsons The New School for Design.
 
+Después de graduarse, trabajó en el Eyebeam OpenLab, un laboratorio de tecnología creativa de código abierto para el dominio público como becario de investigación y desarrollo de 2005 a 2006 y miembro principal de 2006 a 2007. En 2007, cofundó el Free Art and Technology Lab (F.A.T. Lab), un colectivo de arte y tecnología basado en Internet dedicado a la intersección de la piratería de código abierto y la cultura popular. Ha trabajado bajo el seudónimo fi5e
+
+Roth y Ben Engebreth fueron premiados con un 2007 Rhizome Commission for White Glove Tracking, que fue presentado en el Contemporary New Museum in New York City. Evan Roth fue luego, nuevamente ganador, del Rhizome Commission in 2008 por su proyecto  "T.S.A. Communications".
+
+Un gran porcentaje de sus trabajos forman parte de la colección permanente del Museum of Modern Art.
+
+El 2012, fue premiado con el Smithsonian Cooper-Hewitt National Design Award.
+
+</p>	
 </section>
 
-<section id="evolucion">
-		<h2>Evolución:</h2>
-		<center>
-		<object data="fotos/evolucion.svg" width="150px" height="auto"></object>
-		</center>
-		<p>2 principales ideas con respecto a la evolución tecnológica:</p>
-		<p> &#128204; Concepción heróica: una sola persona (individuo) es quien inventa/crea un artefacto.</p>	
-		<p> &#128204; Del darwinismo: evolución; cambio acumulativo. Combinación de elementos culturales para formar otro. </p>
-		<p>Esta última, se basa en 4 premisas: </p>
-		<p>1.- Percepción del problema: se reconoce un modelo incompleto que requiere de una corrección.</p>
-		<p>2.- Formulación del marco: reúne datos relacionados con el prblema</p>
-		<p>3.- Acto de invituición: solución al problema mediante el acto mental no predeterminad </p>
-		<p>4.- Revisión crítica: revisa y analiza por completo la solución.</p>
-		<p>La evolución tecnológica pasa por periodos de cambio rápidos y otros de relativa estabilidad. A pesar de que se habla de que vivimos en "era del progreso, la tecnología y el acceso", muchas veces esa tecnología llega a nosotros forzadamente después, un ejemplo es el de los autos eléctricos, que a pesar de exisitir y ser comunes en ciertos países, en Chile no son de uso ni venta masiva debido a que todavía ha sido posible (por diversos motivos) en instalar en Chile de forma significativa puntos de carga para dichos vehículos.</p>
-</section>	
 </article>
 
 <footer id="referencias">
 	<h4>Referencias:</h4>
-	<p>Wikipedia contributors. (2020, noviembre 18). George Basalla. Wikipedia, The Free Encyclopedia. https://en.wikipedia.org/w/index.php?title=George_Basalla&oldid=989336759</p>
-	<p>Estructura web y documentación. (s/f). Mozilla.org. Recuperado el 3 de octubre de 2022, de https://developer.mozilla.org/es/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure</p>
-	<p>Tutorial Point. (2020). Html tutorial (Tutorial Point, Ed.). Independently Published.</p>
-	<p>Font awesome. (s/f). Fontawesome.com. Recuperado el 3 de octubre de 2022, de https://fontawesome.com/</p>
+https://www.medialab-matadero.es/personal/fernando-dominguez-rubio <br>
+https://cccd.victorsampedro.com/employees/fernando-dominguez-rubio/ <br>
+
+Roth Evans:<br>
+https://www.nytimes.com/2012/05/03/garden/evan-roth-an-award-winning-designer-and-artist.html<br>
+https://theinfluencers.org/evan-roth <br>
+
+L.A.S.E.R Tag<br>
+https://artelectronicmedia.com/en/artwork/graffiti-research-lab-l-a-s-e-r-tag/<br>
+http://www.graffitiresearchlab.com/blog/projects/laser-tag/#video<br>
+https://www.cafka.org/cafka09/grl<br>
+
 </footer>
 
 
