subi unos cambios de el formato

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>La evolución de la tecnología</title>
+	<title>Artisticamente político</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/1376679f11.js" crossorigin="anonymous"></script>
 </head>
@@ -19,19 +19,19 @@
 <center>
 <header id="título">
 	
-		<h1>La evolución de la tecnología</h1>
+		<h1> Artisticamente Político</h1>
 </header>
 </center>
 
 <nav class="indice">	
 		 <ul>
 		 	<h4>Índice</h4>
-		 	<li><a href="#autor">Autor</a></li>
-    		<li><a href="#resumen">Resumen</a></li>
-    		<li><a href="#diversidad">Diversidad</a></li>
-    		<li><a href="#necesidad">Necesidad</a></li>
-    		<li><a href="#evolucion">Evolución</a></li>
-    		<li><a href="#referencias">Referencias</a></li>
+		 	<li><a href="#autor">Autores</a></li>
+    		<li><a href="#resumen"></a></li>
+    		<li><a href="#diversidad"></a></li>
+    		<li><a href="#necesidad"></a></li>
+    		<li><a href="#evolucion"></a></li>
+    		<li><a href="#referencias"></a></li>
  		 </ul>
 </nav>
 
@@ -39,10 +39,10 @@
 
 <section>
 <section id="autor">
-		<h2>Autor:</h2>
+		<h2>Autores</h2>
 		<center>
 		<div class="autor">
-			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
+			<img src="img/rubio.jpg" class="autor" width="150px" height="auto">
 		</div>
 		</center>
 		<p> <i class="fa-solid fa-person"></i> Nombre: Fernando Domínguez Rubio</p>
@@ -59,15 +59,7 @@ Su investigación se centra en el estudio de las condiciones infraestructurales 
 Su principal proyecto tiene que ver con el desarrollo de un enfoque ecológico para el estudio de las formas culturales y categorías. Este proyecto se basa principalmente en una exploración etnográfica del backstage del MoMA, donde explora las ecologías materiales necesarias para mantener la legibilidad de obras de arte como objetos valiosos, «poseíbles» y significativos.
 
 Además de este trabajo, también desarrolla una serie de proyectos de investigación acerca de las dimensiones políticas de infraestructuras físicas y digitales contemporáneas. Por último, también está interesado en el desarrollo de metodologías experimentales basadas en el uso estratégico de la ficción. Es también uno de los editores del blog Material World Blog y coautor del libro “The Politics Of Knowledge”.
-</p>	
-</section>
-<section id="autor">
-		<h2>Autor:</h2>
-		<center>
-		<div class="autor">
-			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
-		</div>
-		</center>
+
 		<p> <i class="fa-solid fa-person"></i> Nombre: Uriel Fogué </p>
 		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: 1976</p>
 		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: Madrid, España.</p>
@@ -86,24 +78,14 @@ Además de este trabajo, también desarrolla una serie de proyectos de investiga
 
 <section id="grande">
 	<section id="resumen">
-		<h2>Resumen:</h2>
-		<center>
-		<div class="libro">
-			<img src="fotos/libro.jpg" class="libro" width="150px" height="auto">
-		</div>
-		</center>
-		<p>En pocas palabras, lo que el autor propone, es que los cambios en la historia de la tecnología se dividen en:</p>
-		<p> &#128204; Cambios menores, que se distinguen por ser de carácter progresivo, no atribuíbles a un autor en particular.</p>
-		<p> &#128204; Cambios mayores, asosciados a inventores individuales.</p>
-		<p>Cuando se habla de la evolución de la tecnología se deben tener presentes la diversidad, la continuidad, novedad y la selección:</p>
-		<p>El mundo artifical contiene una variedad de cosas mucho mayor que las necesidades humanas básicas. La diversidad es el resultado de la evolución tecnológica; un proceso continuo. La novedad promueve el proceso de selección, que consiste en la elección de nuevos actefactos.</p>
+	
 </section>	
 
 <section id="autor">
 		<h2>Autor:</h2>
 		<center>
 		<div class="autor">
-			<img src="fotos/autor.jpg" class="autor" width="150px" height="auto">
+			<img src="img/fogué.jpg" class="autor" width="150px" height="auto">
 		</div>
 		</center>
 		<p> <i class="fa-solid fa-person"></i> Nombre: Evan Roth</p>
