arregle la imagen

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Su investigación se centra en el estudio de las condiciones infraestructurales 
 
 Su principal proyecto tiene que ver con el desarrollo de un enfoque ecológico para el estudio de las formas culturales y categorías. Este proyecto se basa principalmente en una exploración etnográfica del backstage del MoMA, donde explora las ecologías materiales necesarias para mantener la legibilidad de obras de arte como objetos valiosos, «poseíbles» y significativos.
 
-Además de este trabajo, también desarrolla una serie de proyectos de investigación acerca de las dimensiones políticas de infraestructuras físicas y digitales contemporáneas. Por último, también está interesado en el desarrollo de metodologías experimentales basadas en el uso estratégico de la ficción. Es también uno de los editores del blog Material World Blog y coautor del libro “The Politics Of Knowledge”.
-
+Además de este trabajo, también desarrolla una serie de proyectos de investigación acerca de las dimensiones políticas de infraestructuras físicas y digitales contemporáneas. Por último, también está interesado en el desarrollo de metodologías experimentales basadas en el uso estratégico de la ficción. Es también uno de los editores del blog Material World Blog y coautor del libro “The Politics Of Knowledge”.<br>	
+<img src="img/fogué.jpg" class="autor" width="150px" height="auto">
 		<p> <i class="fa-solid fa-person"></i> Nombre: Uriel Fogué </p>
 		<p> <i class="fa-regular fa-calendar"></i> Año de nacimiento: 1976</p>
 		<p> <i class="fa-solid fa-location-dot"></i> Lugar de nacimiento: Madrid, España.</p>
@@ -85,7 +85,7 @@ Además de este trabajo, también desarrolla una serie de proyectos de investiga
 		<h2>Autor:</h2>
 		<center>
 		<div class="autor">
-			<img src="img/fogué.jpg" class="autor" width="150px" height="auto">
+			<img src="img/d.jpg" class="autor" width="150px" height="auto">
 		</div>
 		</center>
 		<p> <i class="fa-solid fa-person"></i> Nombre: Evan Roth</p>
