hice el indice horizontal

--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
 <nav class="indice">	
 		 <ul>
 		 	<h4>Índice</h4>
-		 	<li><a href="#autor">Autores del texto</a></li>
-    		<li><a href="#autorproyecto">Autor del proyecto</a></li>
-    		<li><a href="#diversidad"></a></li>
-    		<li><a href="#necesidad"></a></li>
-    		<li><a href="#evolucion"></a></li>
-    		<li><a href="#referencias"></a></li>
+		 	<div class="subindice" id="iautor"><li ><a href="#autor">Autores del texto</a></li></div>
+    		<div class="subindice" id="iaproyecto"><li ><a href="#autorproyecto">Autor del proyecto</a></li></div>
+    		<div class="subindice" id="ireferencias" ><li ><a href="#referencias">Referencias</a></li></div>
  		 </ul>
 </nav>
 
