--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <nav class="indice">	
 		 <ul>
 		 	<h4>Índice</h4>
-		 	<div class="subindice" id="iautor"><li ><a href="#autor">Autores del texto</a></li></div>
-    		<div class="subindice" id="iaproyecto"><li ><a href="#autorproyecto">Autor del proyecto</a></li></div>
-    		<div class="subindice" id="ireferencias" ><li ><a href="#referencias">Referencias</a></li></div>
+		 	<div class="subindice" id="iautor"><a href="#autor">Autores del texto</a></div>
+    		<div class="subindice" id="iaproyecto"><a href="#autorproyecto">Autor del proyecto</a></div>
+    		<div class="subindice" id="ireferencias" ><a href="#referencias">Referencias</a></div>
  		 </ul>
 </nav>
 
