--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Artisticamente político</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/1376679f11.js" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -26,7 +30,7 @@
 <nav class="indice">	
 		 <ul>
 		 	<h4>Índice</h4>
-		 	<div class="subindice" id="iautor"><a href="#autor">Autores del texto</a></div>
+		 	<div class="subindice" id="iautor" ><a href="#autor">Autores del texto</a></div>
     		<div class="subindice" id="iaproyecto"><a href="#autorproyecto">Autor del proyecto</a></div>
     		<div class="subindice" id="ireferencias" ><a href="#referencias">Referencias</a></div>
  		 </ul>
