adicion en estetica

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 	<aside id="analogia">
 		<h3>Analogía orgánico-mecánico</h3>
-		<p>Compara a los organismos vivos con instrumentos mecánicos. En primer instancia se hacían analogías sobre factores/elemenos orgánicos con cosas del ámbito mecánico. A mediados del S. XIX, en conjunto con el desarrollo de la tecnología, elementos y siutaciones de lo mécanico tenían analogías orgánicas.</p>
+		<p>Compara a los organismos vivos con instrumentos mecánicos. En primer instancia se hacían analogías sobre factores/ elemenos orgánicos con cosas del ámbito mecánico. A mediados del S. XIX, en conjunto con el desarrollo de la tecnología, elementos y siutaciones de lo mécanico tenían analogías orgánicas.</p>
+
 </aside>
 
 <div id="contenedor">
@@ -28,11 +29,13 @@
 </center>
 
 <nav class="indice">	
+		
 		 <ul>
-		 	<h4>Índice</h4>
+		 	<div class="indi"><h4 >Índice</h4></div>
 		 	<div class="subindice" id="iautor" ><a href="#autor">Autores del texto</a></div>
     		<div class="subindice" id="iaproyecto"><a href="#autorproyecto">Autor del proyecto</a></div>
     		<div class="subindice" id="ireferencias" ><a href="#referencias">Referencias</a></div>
+    		
  		 </ul>
 </nav>
 
@@ -40,7 +43,7 @@
 
 <section>
 <section id="autor">
-		<h2>Autores</h2>
+		<div class="autores"><h2>Autores</h2></div>
 		<center>
 		<div class="autor">
 			<img src="img/rubio.jpg" class="autor" width="150px" height="auto">
